# cpptest-demos

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  example.cpp  example.h  my_math.cpp  my_math.h
test/: CMakeLists.txt  cmock.cpp  cpp_stub.cpp  example.cpp  fff.cpp  gmock_global.cpp  my_math.cpp
